[gd_scene load_steps=4 format=2]

[ext_resource path="res://sound/gun_revolver_pistol_shot_01.wav" type="AudioStream" id=1]
[ext_resource path="res://character/Character.tscn" type="PackedScene" id=2]
[ext_resource path="res://character/player/player.gd" type="Script" id=3]

[node name="Player" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="BulletPoint" type="Node2D" parent="." index="2"]
position = Vector2( 45.622, 8.014 )

[node name="BulletShot" type="AudioStreamPlayer2D" parent="." index="3"]
stream = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="." index="4"]
current = true
zoom = Vector2( 1.5, 1.5 )
smoothing_enabled = true
smoothing_speed = 10.0
editor_draw_drag_margin = true

[node name="CollisionShape2D" parent="MeleeHit" index="0"]
disabled = false
[connection signal="body_entered" from="MeleeHit" to="." method="_on_MeleeHit_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
